# air_finclient

./: .gitignore  README.md  ishell.sh  months.py  pyproject.toml  requirements.txt  shell.py
airtable/: client.py
finclient/: config.py  containers.py
